@@ -156,7 +156,7 @@ public class IuJsonAdapterTest {
 		adapter.toJson(null);
 		verify(to).apply(null);
 	}
-	
+
 	@Test
 	@SuppressWarnings("unchecked")
 	public void testText() {
@@ -165,7 +165,7 @@ public class IuJsonAdapterTest {
 		adapter.fromJson(JsonValue.NULL);
 		verify(p, never()).apply(any());
 		assertEquals(JsonValue.NULL, adapter.toJson(null));
-		
+
 		final var id = IdGenerator.generateId();
 		adapter.fromJson(IuJson.string(id));
 		verify(p).apply(id);
@@ -588,7 +588,7 @@ public class IuJsonAdapterTest {
 		assertEquals(JsonValue.NULL, adapter.toJson(null));
 		assertTrue(adapter.fromJson(JsonValue.NULL).isEmpty());
 
-		final var value = Optional.of(URI.create("test://" + IdGenerator.generateId()));
+		final var value = Optional.of(randomUri());
 		final var text = IuJson.string(value.get().toString());
 		assertEquals(text, adapter.toJson(value));
 		assertEquals(value, adapter.fromJson(text));
@@ -850,6 +850,17 @@ public class IuJsonAdapterTest {
 		assertStringMap(Properties.class, Properties::new);
 	}
 
+	@Test
+	public void testSingleAsArray() {
+		final var s = IuJson.string(IdGenerator.generateId());
+		assertEquals(Set.of(s.getString()), IuJsonAdapter.of(Set.class).fromJson(s));
+	}
+
+	@Test
+	public void testNullAsArray() {
+		assertNull(IuJsonAdapter.of(Set.class).fromJson(null));
+	}
+
 	private <T extends Number> void assertAdaptNumber(Class<T> c, Class<?> pc, Supplier<T> rand,
 			Function<JsonNumber, T> fromJson, Function<T, String> toString, T def) {
 		final var adapter = IuJsonAdapter.of(c);
@@ -877,7 +888,7 @@ public class IuJsonAdapterTest {
 	}
 
 	private URL randomUrl() {
-		return IuException.unchecked(() -> new URL("http://localhost/" + IdGenerator.generateId()));
+		return IuException.unchecked(() -> URI.create("http://localhost/" + IdGenerator.generateId()).toURL());
 	}
 
 	private int randomLength() {
